[gd_scene load_steps=17 format=3 uid="uid://oyc4n17nij6i"]

[ext_resource type="Script" path="res://Scripts/Enemy/Enemy.gd" id="1_06ofs"]
[ext_resource type="Texture2D" uid="uid://cqid4clqbudlv" path="res://Sprites/Enemy/BirdEnemySpritesheet.png" id="1_kpkqh"]
[ext_resource type="Script" path="res://Scripts/Misc/Hurtbox.gd" id="2_00oey"]
[ext_resource type="Script" path="res://Scripts/Misc/Hitbox.gd" id="3_33jdv"]
[ext_resource type="Script" path="res://Scripts/Misc/Health.gd" id="4_rlxb3"]
[ext_resource type="Script" path="res://Scripts/Misc/FiniteStateMachine.gd" id="5_kwi8c"]
[ext_resource type="Script" path="res://Scripts/Misc/Hurt.gd" id="5_ylsm5"]
[ext_resource type="Script" path="res://Scripts/Enemy/MoveState.gd" id="7_o1ea5"]
[ext_resource type="Script" path="res://Scripts/Player/ProjectileSpawner.gd" id="8_3y7eu"]
[ext_resource type="Script" path="res://Scenes/Enemy/TankShoot.gd" id="8_6fb5q"]
[ext_resource type="PackedScene" uid="uid://gbg6ni2haofh" path="res://Scenes/Enemy/EnemyProjectile.tscn" id="10_g2f6s"]

[sub_resource type="Animation" id="Animation_ma72m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jf1p2"]
resource_name = "flying"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.266667, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dk1po"]
_data = {
"RESET": SubResource("Animation_ma72m"),
"flying": SubResource("Animation_jf1p2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_n51yn"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_4omk4"]
radius = 3.0

[node name="TankEnemy" type="CharacterBody2D" node_paths=PackedStringArray("health")]
script = ExtResource("1_06ofs")
health = NodePath("Components/Misc/Health")

[node name="Body" type="Node2D" parent="."]

[node name="Sprites" type="Node2D" parent="Body"]

[node name="Sprite" type="Sprite2D" parent="Body/Sprites"]
texture = ExtResource("1_kpkqh")
centered = false
hframes = 3

[node name="Animation" type="AnimationPlayer" parent="Body/Sprites"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_dk1po")
}
autoplay = "flying"

[node name="Areas" type="Node2D" parent="Body"]

[node name="Hurtbox" type="Area2D" parent="Body/Areas"]
collision_layer = 2
collision_mask = 0
script = ExtResource("2_00oey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Areas/Hurtbox"]
visible = false
position = Vector2(8, 9)
shape = SubResource("CircleShape2D_n51yn")

[node name="Hitbox" type="Area2D" parent="Body/Areas"]
collision_layer = 0
script = ExtResource("3_33jdv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Areas/Hitbox"]
visible = false
position = Vector2(8, 9)
shape = SubResource("CircleShape2D_n51yn")

[node name="ShootPosition" type="Marker2D" parent="Body"]
position = Vector2(8, 8)

[node name="Components" type="Node2D" parent="."]

[node name="Misc" type="Node" parent="Components"]

[node name="Health" type="Node" parent="Components/Misc"]
script = ExtResource("4_rlxb3")
health = 10

[node name="Hurt" type="Node" parent="Components/Misc" node_paths=PackedStringArray("health", "hurtbox")]
script = ExtResource("5_ylsm5")
health = NodePath("../Health")
hurtbox = NodePath("../../../Body/Areas/Hurtbox")

[node name="FiniteStateMachine" type="Node" parent="Components" node_paths=PackedStringArray("initialState")]
script = ExtResource("5_kwi8c")
initialState = NodePath("ShootState")

[node name="MoveState" type="Node" parent="Components/FiniteStateMachine" node_paths=PackedStringArray("enemy", "moveTimer")]
script = ExtResource("7_o1ea5")
enemy = NodePath("../../..")
moveTimer = NodePath("../../Timers/MoveTimer")

[node name="ShootState" type="Node" parent="Components/FiniteStateMachine"]
script = ExtResource("8_6fb5q")

[node name="ProjectileSpawner" type="Node2D" parent="Components/FiniteStateMachine/ShootState" node_paths=PackedStringArray("bulletspawner", "power_timer", "durationTimer", "body")]
script = ExtResource("8_3y7eu")
bullethell = ExtResource("10_g2f6s")
alpha = 1.0
bulletspawner = NodePath("../../../../Body/ShootPosition")
power_timer = NodePath("../../../Timers/BulletStormCooldown")
durationTimer = NodePath("../../../Timers/BulletStormDuration")
body = NodePath("../../../..")
isEnemy = true

[node name="Timers" type="Node2D" parent="Components"]

[node name="MoveTimer" type="Timer" parent="Components/Timers"]
wait_time = 5.0
one_shot = true

[node name="BulletStormCooldown" type="Timer" parent="Components/Timers"]
wait_time = 0.35

[node name="BulletStormDuration" type="Timer" parent="Components/Timers"]
wait_time = 5.0
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
z_as_relative = false
position = Vector2(8, 9)
shape = SubResource("CircleShape2D_4omk4")

[connection signal="timeout" from="Components/Timers/MoveTimer" to="Components/FiniteStateMachine/MoveState" method="_on_move_timer_timeout"]
[connection signal="timeout" from="Components/Timers/BulletStormCooldown" to="Components/FiniteStateMachine/ShootState/ProjectileSpawner" method="_on_bullet_storm_cooldown_timeout"]
[connection signal="timeout" from="Components/Timers/BulletStormDuration" to="Components/FiniteStateMachine/ShootState" method="_on_duration_timer_timeout"]
[connection signal="timeout" from="Components/Timers/BulletStormDuration" to="Components/FiniteStateMachine/ShootState/ProjectileSpawner" method="_on_bullet_storm_duration_timeout"]
